client: legacy: Abort when passed --disable-factory

This option isn't working anymore, and shouldn't silently use the
server instead of a new process.

https://bugzilla.gnome.org/show_bug.cgi?id=707899